--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ requires = ["hatchling"]
 
 [tool.pixi.project]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-arm64"]
+platforms = ["linux-64", "osx-arm64", "osx-64"]
 
 [tool.pixi.activation.env]
 XLA_PYTHON_CLIENT_PREALLOCATE = "false"
@@ -39,6 +39,9 @@ jupyter = ">=1.1.1,<2"
 
 [tool.pixi.feature.cpu.pypi-dependencies]
 jax = ">=0.4.24,<0.5.0"
+
+[tool.pixi.feature.cpu.target.osx-64.dependencies]
+dm-tree = "==0.1.8"
 
 [tool.pixi.feature.cuda]
 platforms = ["linux-64", "osx-arm64"]
